When the interactions pane is reset, the working directory is set to a plausible location.  If a project is open, then working directory is the declared working diretory of the project if one exists; otherwise it is the sourceroot for the project.  If no project is open, the working directory is the source root for one of the open files (they should all have the same root) provided WORKING_DIRECTORY is not set in the DrJava profile.  In flat file mode when WORKING_DIRECTORY is set in the DrJava preferences, the working directory for the interactions pane is the specified directory.
When the interactions pane is reset, a banner giving the working
directory for the new interpreter appears at the top of the pane.

I also changed all names of the form "classpath" to "classPath" and
names of the form "Classpath" to "ClassPath".  In the previous code
base, there was no consistency concerning capitalizing "Path" in
"classPath" or "ClassPath".  I also eliminated IGetDocuments in favor
of GlobalModel (which has many more methods) which forced the renaming
of several classes concerning the IGetDocuments interface.  There is
now a DummyGlobalModel class in which all methods from GlobalModel throw
UnsupportedOperation exceptions.
----------------------------------------------------------------------
src/edu/rice/cs/drjava/DrJava.java CVS:
src/edu/rice/cs/drjava/config/FileOption.java CVS:
src/edu/rice/cs/drjava/config/IntegerOptionTest.java CVS:
src/edu/rice/cs/drjava/config/KeyStrokeOptionTest.java CVS:
src/edu/rice/cs/drjava/config/OptionConstants.java CVS:
src/edu/rice/cs/drjava/config/OptionParser.java CVS:
src/edu/rice/cs/drjava/config/VectorOptionTest.java CVS:
src/edu/rice/cs/drjava/model/AbstractGlobalModel.java CVS:
src/edu/rice/cs/drjava/model/DefaultGlobalModel.java CVS:
src/edu/rice/cs/drjava/model/DefaultJavadocModel.java CVS:
src/edu/rice/cs/drjava/model/DummyGlobalModelListener.java CVS:
src/edu/rice/cs/drjava/model/FileGroupingState.java CVS:
src/edu/rice/cs/drj